Adjusting inline emoji alignment Fixed chrome issue where emoji was aligned too low in when the font-size was smaller than the emoji's minimum size

--- a/assets/css/emojione.css
+++ b/assets/css/emojione.css
@@ -1,16 +1,16 @@
 .emojione {
   /* Emoji Sizing */
   font-size: inherit;
-  height: 2.4ex;
-  width: 2.6ex;
+  height: 3ex;
+  width: 3.1ex;
   min-height: 20px;
   min-width: 20px;
 
-  /* Inline Text Alignment */
+  /* Inline alignment adjust the margins  */
   display: inline-block;
-  margin: 0 .15em;
+  margin: -.4ex .15em .2ex;
   line-height: normal;
-  vertical-align: -.4ex;
+  vertical-align: sub;
 }
 
 img.emojione {
